--- a/node/weightmonitor/weightmonitor.ioc
+++ b/node/weightmonitor/weightmonitor.ioc
@@ -1,29 +1,29 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.Request0=USART2_RX
 Dma.Request1=USART2_TX
-Dma.Request2=USART3_RX
-Dma.Request3=USART3_TX
-Dma.Request4=USART1_RX
-Dma.Request5=USART1_TX
+Dma.Request2=USART1_RX
+Dma.Request3=USART1_TX
+Dma.Request4=USART3_RX
+Dma.Request5=USART3_TX
 Dma.RequestsNb=6
-Dma.USART1_RX.4.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART1_RX.4.Instance=DMA1_Channel5
-Dma.USART1_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_RX.4.MemInc=DMA_MINC_ENABLE
-Dma.USART1_RX.4.Mode=DMA_CIRCULAR
-Dma.USART1_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_RX.4.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_RX.4.Priority=DMA_PRIORITY_LOW
-Dma.USART1_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.USART1_TX.5.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART1_TX.5.Instance=DMA1_Channel4
-Dma.USART1_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_TX.5.MemInc=DMA_MINC_ENABLE
-Dma.USART1_TX.5.Mode=DMA_NORMAL
-Dma.USART1_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_TX.5.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_TX.5.Priority=DMA_PRIORITY_LOW
-Dma.USART1_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.2.Instance=DMA1_Channel5
+Dma.USART1_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.2.Mode=DMA_CIRCULAR
+Dma.USART1_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART1_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.3.Instance=DMA1_Channel4
+Dma.USART1_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.3.Mode=DMA_NORMAL
+Dma.USART1_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART2_RX.0.Instance=DMA1_Channel6
 Dma.USART2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
@@ -42,24 +42,24 @@ Dma.USART2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART2_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.USART2_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.USART3_RX.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART3_RX.2.Instance=DMA1_Channel3
-Dma.USART3_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART3_RX.2.MemInc=DMA_MINC_ENABLE
-Dma.USART3_RX.2.Mode=DMA_CIRCULAR
-Dma.USART3_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART3_RX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.USART3_RX.2.Priority=DMA_PRIORITY_LOW
-Dma.USART3_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.USART3_TX.3.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART3_TX.3.Instance=DMA1_Channel2
-Dma.USART3_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART3_TX.3.MemInc=DMA_MINC_ENABLE
-Dma.USART3_TX.3.Mode=DMA_NORMAL
-Dma.USART3_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART3_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.USART3_TX.3.Priority=DMA_PRIORITY_LOW
-Dma.USART3_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART3_RX.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART3_RX.4.Instance=DMA1_Channel3
+Dma.USART3_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_RX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART3_RX.4.Mode=DMA_CIRCULAR
+Dma.USART3_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_RX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_RX.4.Priority=DMA_PRIORITY_LOW
+Dma.USART3_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART3_TX.5.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART3_TX.5.Instance=DMA1_Channel2
+Dma.USART3_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_TX.5.MemInc=DMA_MINC_ENABLE
+Dma.USART3_TX.5.Mode=DMA_NORMAL
+Dma.USART3_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_TX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_TX.5.Priority=DMA_PRIORITY_LOW
+Dma.USART3_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 FREERTOS.IPParameters=Tasks01,configUSE_TIMERS,Timers01,configTIMER_TASK_PRIORITY,configTOTAL_HEAP_SIZE,Queues01
 FREERTOS.Queues01=q_r_data,4,p_buffblock_t,NULL;q_r_ctrl,4,p_buffblock_t,NULL;q_r_wifi,4,p_buffblock_t,NULL;q_t_data,4,p_buffblock_t,NULL;q_t_ctrl,4,p_buffblock_t,NULL;q_t_wifi,4,p_buffblock_t,NULL
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default;recv_data,3,128,func_recv_data,As external;recv_ctrl,3,128,func_recv_ctrl,As external;recv_wifi,3,128,func_recv_wifi,As external;handle_data,2,128,func_handle_data,As external;handle_ctrl,1,128,func_handle_ctrl,As external;handle_wifi,1,128,func_handle_wifi,As external
@@ -200,6 +200,8 @@ RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=48000000
 RCC.USBPrescaler=RCC_USBPLLCLK_DIV1_5
 RCC.VCOOutput2Freq_Value=8000000
+USART2.BaudRate=9600
+USART2.IPParameters=BaudRate
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
 VP_SYS_VS_tim2.Mode=TIM2
