放弃效率低下的queue，使用mail传输串口数据

--- a/node/weightmonitor/weightmonitor.ioc
+++ b/node/weightmonitor/weightmonitor.ioc
@@ -60,8 +60,9 @@ Dma.USART3_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART3_TX.3.PeriphInc=DMA_PINC_DISABLE
 Dma.USART3_TX.3.Priority=DMA_PRIORITY_LOW
 Dma.USART3_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-FREERTOS.IPParameters=Tasks01,configUSE_TIMERS,Timers01,configTIMER_TASK_PRIORITY,configTOTAL_HEAP_SIZE,Queues01
-FREERTOS.Queues01=uartdata_r_queue,4,uartdata_package_r_t,NULL;uartdata_t_queue,4,uartdata_package_t_t,NULL;uartwifi_r_queue,4,uartwifi_package_r_t,NULL;uartwifi_t_queue,4,uartwifi_package_t_t,NULL;uartctrl_r_queue,4,uartctrl_package_r_t,NULL;uartctrl_t_queue,4,uartctrl_package_t_t,NULL
+FREERTOS.INCLUDE_vTaskDelayUntil=1
+FREERTOS.IPParameters=Tasks01,configUSE_TIMERS,Timers01,configTIMER_TASK_PRIORITY,configTOTAL_HEAP_SIZE,Queues01,INCLUDE_vTaskDelayUntil
+FREERTOS.Queues01=uartdata_r_queue,4,uint32_t,NULL;uartdata_t_queue,4,uint32_t ,NULL;uartwifi_r_queue,4,uint32_t ,NULL;uartwifi_t_queue,4,uint32_t ,NULL;uartctrl_r_queue,4,uint32_t ,NULL;uartctrl_t_queue,4,uint32_t ,NULL
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default;recv_data,3,128,func_recv_data,As external;recv_ctrl,3,128,func_recv_ctrl,As external;recv_wifi,3,128,func_recv_wifi,As external;handle_data,2,128,func_handle_data,As external;handle_ctrl,1,128,func_handle_ctrl,As external;handle_wifi,1,128,func_handle_wifi,As external
 FREERTOS.Timers01=led0,Callback_led0,osTimerPeriodic,As external
 FREERTOS.configTIMER_TASK_PRIORITY=3
