--- a/node/weightmonitor/weightmonitor.ioc
+++ b/node/weightmonitor/weightmonitor.ioc
@@ -62,7 +62,7 @@ Dma.USART3_TX.3.Priority=DMA_PRIORITY_LOW
 Dma.USART3_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.IPParameters=Tasks01,configUSE_TIMERS,Timers01,configTIMER_TASK_PRIORITY,configTOTAL_HEAP_SIZE,Queues01,INCLUDE_vTaskDelayUntil
-FREERTOS.Queues01=uartdata_r_queue,4,uint32_t,NULL;uartdata_t_queue,4,uint32_t ,NULL;uartwifi_r_queue,4,uint32_t ,NULL;uartwifi_t_queue,4,uint32_t ,NULL;uartctrl_r_queue,4,uint32_t ,NULL;uartctrl_t_queue,4,uint32_t ,NULL
+FREERTOS.Queues01=uartdata_r_queue,4,uart_memblk_pt,NULL;uartdata_t_queue,4,uart_memblk_pt,NULL;uartwifi_r_queue,4,uart_memblk_pt ,NULL;uartwifi_t_queue,4,uart_memblk_pt,NULL;uartctrl_r_queue,4,uart_memblk_pt,NULL;uartctrl_t_queue,4,uart_memblk_pt ,NULL
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default;recv_data,3,128,func_recv_data,As external;recv_ctrl,3,128,func_recv_ctrl,As external;recv_wifi,3,128,func_recv_wifi,As external;handle_data,2,128,func_handle_data,As external;handle_ctrl,1,128,func_handle_ctrl,As external;handle_wifi,1,128,func_handle_wifi,As external
 FREERTOS.Timers01=led0,Callback_led0,osTimerPeriodic,As external
 FREERTOS.configTIMER_TASK_PRIORITY=3
