完成串口发送服务函数，待测试

--- a/node/weightmonitor/weightmonitor.ioc
+++ b/node/weightmonitor/weightmonitor.ioc
@@ -60,10 +60,11 @@ Dma.USART3_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART3_TX.3.PeriphInc=DMA_PINC_DISABLE
 Dma.USART3_TX.3.Priority=DMA_PRIORITY_LOW
 Dma.USART3_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+FREERTOS.BinarySemaphores01=data_t_cplt;wifi_t_cplt;ctrl_t_cplt
 FREERTOS.INCLUDE_vTaskDelayUntil=1
-FREERTOS.IPParameters=Tasks01,configUSE_TIMERS,Timers01,configTIMER_TASK_PRIORITY,configTOTAL_HEAP_SIZE,Queues01,INCLUDE_vTaskDelayUntil
-FREERTOS.Queues01=uartdata_r_queue,4,uart_memblk_pt,NULL;uartdata_t_queue,4,uart_memblk_pt,NULL;uartwifi_r_queue,4,uart_memblk_pt ,NULL;uartwifi_t_queue,4,uart_memblk_pt,NULL;uartctrl_r_queue,4,uart_memblk_pt,NULL;uartctrl_t_queue,4,uart_memblk_pt ,NULL
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default;recv_data,3,128,func_recv_data,As external;recv_ctrl,3,128,func_recv_ctrl,As external;recv_wifi,3,128,func_recv_wifi,As external;handle_data,2,128,func_handle_data,As external;handle_ctrl,1,128,func_handle_ctrl,As external;handle_wifi,1,128,func_handle_wifi,As external
+FREERTOS.IPParameters=Tasks01,configUSE_TIMERS,Timers01,configTIMER_TASK_PRIORITY,configTOTAL_HEAP_SIZE,Queues01,INCLUDE_vTaskDelayUntil,BinarySemaphores01
+FREERTOS.Queues01=data_r_queue,4,uart_memblk_pt,NULL;data_t_queue,4,uart_memblk_pt,NULL;wifi_r_queue,4,uart_memblk_pt ,NULL;wifi_t_queue,4,uart_memblk_pt,NULL;ctrl_r_queue,4,uart_memblk_pt,NULL;ctrl_t_queue,4,uart_memblk_pt ,NULL
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default;recv_data,3,128,func_recv_data,As external;recv_ctrl,3,128,func_recv_ctrl,As external;recv_wifi,3,128,func_recv_wifi,As external;handle_data,1,128,func_handle_data,As external;handle_ctrl,1,128,func_handle_ctrl,As external;handle_wifi,1,128,func_handle_wifi,As external;send_data,2,128,func_send_data,As external;send_ctrl,2,128,func_send_ctrl,As external;send_wifi,2,128,func_send_wifi,As external
 FREERTOS.Timers01=led0,Callback_led0,osTimerPeriodic,As external
 FREERTOS.configTIMER_TASK_PRIORITY=3
 FREERTOS.configTOTAL_HEAP_SIZE=10240
@@ -99,7 +100,7 @@ Mcu.Pin9=PA10
 Mcu.PinsNb=14
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
-MxCube.Version=4.13.0
+MxCube.Version=4.13.1
 MxDb.Version=DB.4.0.130
 NVIC.DMA1_Channel2_IRQn=true\:5\:0\:false
 NVIC.DMA1_Channel3_IRQn=true\:5\:0\:false
@@ -145,7 +146,7 @@ PC13-TAMPER-RTC.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F103
 PCC.MCU=STM32F103C(8-B)Tx
-PCC.MXVersion=4.13.0
+PCC.MXVersion=4.13.1
 PCC.PartNumber=STM32F103C8Tx
 PCC.Seq0=0
 PCC.Series=STM32F1
