--- a/node/weightmonitor/weightmonitor.ioc
+++ b/node/weightmonitor/weightmonitor.ioc
@@ -62,10 +62,11 @@ Dma.USART3_TX.3.Priority=DMA_PRIORITY_LOW
 Dma.USART3_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 FREERTOS.BinarySemaphores01=data_t_cplt;wifi_t_cplt;ctrl_t_cplt
 FREERTOS.INCLUDE_vTaskDelayUntil=1
-FREERTOS.IPParameters=Tasks01,configUSE_TIMERS,Timers01,configTIMER_TASK_PRIORITY,configTOTAL_HEAP_SIZE,Queues01,INCLUDE_vTaskDelayUntil,BinarySemaphores01
+FREERTOS.IPParameters=Tasks01,configUSE_TIMERS,Timers01,configTIMER_TASK_PRIORITY,configTOTAL_HEAP_SIZE,Queues01,INCLUDE_vTaskDelayUntil,BinarySemaphores01,configMINIMAL_STACK_SIZE
 FREERTOS.Queues01=data_r_queue,4,uart_memblk_pt,NULL;data_t_queue,4,uart_memblk_pt,NULL;wifi_r_queue,4,uart_memblk_pt ,NULL;wifi_t_queue,4,uart_memblk_pt,NULL;ctrl_r_queue,4,uart_memblk_pt,NULL;ctrl_t_queue,4,uart_memblk_pt ,NULL
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default;recv_data,3,128,func_recv_data,As external;recv_ctrl,3,128,func_recv_ctrl,As external;recv_wifi,3,128,func_recv_wifi,As external;handle_data,1,128,func_handle_data,As external;handle_ctrl,1,128,func_handle_ctrl,As external;handle_wifi,1,128,func_handle_wifi,As external;send_data,2,128,func_send_data,As external;send_ctrl,2,128,func_send_ctrl,As external;send_wifi,2,128,func_send_wifi,As external
+FREERTOS.Tasks01=defaultTask,0,64,StartDefaultTask,Default;recv_data,3,64,func_recv_data,As external;recv_ctrl,3,64,func_recv_ctrl,As external;recv_wifi,3,64,func_recv_wifi,As external;handle_data,1,128,func_handle_data,As external;handle_ctrl,1,128,func_handle_ctrl,As external;handle_wifi,1,128,func_handle_wifi,As external;send_data,2,64,func_send_data,As external;send_ctrl,2,64,func_send_ctrl,As external;send_wifi,2,64,func_send_wifi,As external
 FREERTOS.Timers01=led0,Callback_led0,osTimerPeriodic,As external
+FREERTOS.configMINIMAL_STACK_SIZE=64
 FREERTOS.configTIMER_TASK_PRIORITY=3
 FREERTOS.configTOTAL_HEAP_SIZE=10240
 FREERTOS.configUSE_TIMERS=1
@@ -113,6 +114,9 @@ NVIC.SysTick_IRQn=true\:15\:0\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false
 NVIC.TimeBase=TIM2_IRQn
 NVIC.TimeBaseIP=TIM2
+NVIC.USART1_IRQn=true\:5\:0\:false
+NVIC.USART2_IRQn=true\:5\:0\:false
+NVIC.USART3_IRQn=true\:5\:0\:false
 PA10.GPIOParameters=GPIO_PuPd
 PA10.GPIO_PuPd=GPIO_PULLDOWN
 PA10.Mode=Asynchronous
