--- a/node/weightmonitor/weightmonitor.ioc
+++ b/node/weightmonitor/weightmonitor.ioc
@@ -63,9 +63,9 @@ Dma.USART3_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphData
 FREERTOS.BinarySemaphores01=data_t_cplt;wifi_t_cplt;ctrl_t_cplt
 FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.IPParameters=Tasks01,configUSE_TIMERS,Timers01,configTIMER_TASK_PRIORITY,configTOTAL_HEAP_SIZE,Queues01,INCLUDE_vTaskDelayUntil,BinarySemaphores01,configMINIMAL_STACK_SIZE
-FREERTOS.Queues01=data_r_queue,4,uart_memblk_pt,NULL;data_t_queue,4,uart_memblk_pt,NULL;wifi_r_queue,4,uart_memblk_pt ,NULL;wifi_t_queue,4,uart_memblk_pt,NULL;ctrl_r_queue,4,uart_memblk_pt,NULL;ctrl_t_queue,4,uart_memblk_pt ,NULL
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default;recv_data,3,128,func_recv_data,As external;recv_ctrl,3,128,func_recv_ctrl,As external;recv_wifi,3,128,func_recv_wifi,As external;handle_data,1,128,func_handle_data,As external;handle_ctrl,1,128,func_handle_ctrl,As external;handle_wifi,1,128,func_handle_wifi,As external;send_data,2,128,func_send_data,As external;send_ctrl,2,128,func_send_ctrl,As external;send_wifi,2,128,func_send_wifi,As external
-FREERTOS.Timers01=led0,Callback_led0,osTimerPeriodic,As external
+FREERTOS.Queues01=data_r_queue,4,uart_memblk_pt,NULL;data_t_queue,4,uart_memblk_pt,NULL;wifi_r_queue,4,uart_memblk_pt ,NULL;wifi_t_queue,4,uart_memblk_pt,NULL;ctrl_r_queue,4,uart_memblk_pt,NULL;ctrl_t_queue,4,uart_memblk_pt ,NULL;datarecv_queue,256,char,NULL;wifirecv_queue,256,char,NULL
+FREERTOS.Tasks01=defaultTask,-3,128,StartDefaultTask,Default;recv_data,3,128,func_recv_data,As external;recv_ctrl,3,128,func_recv_ctrl,As external;recv_wifi,3,128,func_recv_wifi,As external;handle_data,1,128,func_handle_data,As external;handle_ctrl,1,128,func_handle_ctrl,As external;handle_wifi,1,128,func_handle_wifi,As external;send_data,2,128,func_send_data,As external;send_ctrl,2,128,func_send_ctrl,As external;send_wifi,2,128,func_send_wifi,As external;mainthread,0,128,func_mainthread,As external
+FREERTOS.Timers01=led0,Callback_led0,osTimerOnce,As external
 FREERTOS.configMINIMAL_STACK_SIZE=128
 FREERTOS.configTIMER_TASK_PRIORITY=3
 FREERTOS.configTOTAL_HEAP_SIZE=15360
