--- a/node/weightmonitor/weightmonitor.ioc
+++ b/node/weightmonitor/weightmonitor.ioc
@@ -144,7 +144,7 @@ PB2.GPIO_Label=Wifi_En
 PB2.Locked=true
 PB2.Signal=GPIO_Output
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
-PC13-TAMPER-RTC.GPIO_Label=LED0
+PC13-TAMPER-RTC.GPIO_Label=devLED0
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPIO_Output
 PCC.Checker=false
