--- a/node/weightmonitor/weightmonitor.ioc
+++ b/node/weightmonitor/weightmonitor.ioc
@@ -71,17 +71,20 @@ FREERTOS.configTIMER_TASK_PRIORITY=3
 FREERTOS.configTOTAL_HEAP_SIZE=15360
 FREERTOS.configUSE_TIMERS=1
 File.Version=6
+IWDG.IPParameters=Prescaler
+IWDG.Prescaler=IWDG_PRESCALER_256
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=DMA
 Mcu.IP1=FREERTOS
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IP6=USART2
-Mcu.IP7=USART3
-Mcu.IPNb=8
+Mcu.IP2=IWDG
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=USART1
+Mcu.IP7=USART2
+Mcu.IP8=USART3
+Mcu.IPNb=9
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -89,7 +92,8 @@ Mcu.Pin1=PD0-OSC_IN
 Mcu.Pin10=PA13
 Mcu.Pin11=PA14
 Mcu.Pin12=VP_FREERTOS_VS_ENABLE
-Mcu.Pin13=VP_SYS_VS_tim2
+Mcu.Pin13=VP_IWDG_VS_IWDG
+Mcu.Pin14=VP_SYS_VS_tim2
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
@@ -98,7 +102,7 @@ Mcu.Pin6=PB10
 Mcu.Pin7=PB11
 Mcu.Pin8=PA9
 Mcu.Pin9=PA10
-Mcu.PinsNb=14
+Mcu.PinsNb=15
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=4.13.1
@@ -180,7 +184,7 @@ ProjectManager.ProjectName=weightmonitor
 ProjectManager.StackSize=0x200
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_DMA_Init-DMA-false,3-MX_USART2_UART_Init-USART2-false,4-MX_USART3_UART_Init-USART3-false,5-MX_USART1_UART_Init-USART1-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_DMA_Init-DMA-false,3-MX_USART2_UART_Init-USART2-false,4-MX_USART3_UART_Init-USART3-false,5-MX_USART1_UART_Init-USART1-false,6-MX_IWDG_Init-IWDG-false
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -210,6 +214,8 @@ USART2.BaudRate=9600
 USART2.IPParameters=BaudRate
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
+VP_IWDG_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_tim2.Mode=TIM2
 VP_SYS_VS_tim2.Signal=SYS_VS_tim2
 board=weightmonitor
